Fix hr mobile spacing on magazine sidebar [WEB-1671]

--- a/frontend/scss/pages/_p-issue-show.scss
+++ b/frontend/scss/pages/_p-issue-show.scss
@@ -167,6 +167,14 @@
 // Styles specific to magazine issues:
 .p-magazineissue-show {
   .o-article__primary-actions {
+    hr {
+      margin-bottom: 24px;
+
+      @include breakpoint('large+') {
+        margin-bottom: 0;
+      }
+    }
+
     #h-nav-magazine-social {
       font-weight: 400;
       color: $color__black--90;
